...

    <include layout="@layout/nav_header"
        android:id="@+id/header_title"
        />

    <Button
        android:id="@+id/publishPostBT"
        android:layout_width="190dp"
        android:layout_height="83dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="Publish"
        android:textSize="16pt"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/addPostImage" />

    <EditText
        android:id="@+id/postContentBox"
        android:layout_width="410dp"
        android:layout_height="115dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="How are you today?"
...
